 Create and Edit Aura Components/force-app/main/default/objects/Dispenser_bank__c/Dispenser_bank__c.object-meta.xml
<CustomObject>
    <label>Dispenser bank</label>
    <nameField>
        <displayFormat>DBk-{0000}</displayFormat>
        <label>Dispenser account Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dispenser banks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>