 Create and Edit Aura Components/force-app/main/default/objects/Dispenser_bank__c/fields/Balance_interest__c.field-meta.xml
<CustomField>
    <fullName>Balance_interest__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Balance interest</label>
    <precision>4</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>