 Create and Edit Aura Components/force-app/main/default/objects/Dispenser_bank__c/fields/BYN_exchange_rate__c.field-meta.xml
<CustomField>
    <fullName>BYN_exchange_rate__c</fullName>
    <defaultValue>1</defaultValue>
    <label>BYN exchange rate</label>
    <precision>10</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>