 Create and Edit Aura Components/force-app/main/default/objects/Dispenser_bank__c/fields/Transfer_commision__c.field-meta.xml
<CustomField>
    <fullName>Transfer_commision__c</fullName>
    <defaultValue>0.1</defaultValue>
    <label>Transfer commision</label>
    <precision>4</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>